--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Hiragino Maru Gothic ProN", "ヒラギノ丸ゴ ProN", "Hiragino Sans", "ヒラギノ角ゴシック", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,107 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+canvas {
+  width: 100vw;
+  height: 100vh;
+  display: block;
+}
+
+.app-root {
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(135deg, #09668f, #45a2c1, #a8e5ff);
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  backdrop-filter: blur(6px);
+  animation: fadeIn 0.5s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0 }
+  to { opacity: 1 }
+}
+
+.title {
+  font-size: 3rem;
+  margin-bottom: 40px;
+  letter-spacing: 0.05em;
+}
+
+.primary-btn {
+  font-family: "Hiragino Maru Gothic ProN", "ヒラギノ丸ゴ ProN", "Hiragino Sans", "ヒラギノ角ゴシック", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+  padding: 14px 32px;
+  margin: 20px;
+  font-size: 24px;
+  border-radius: 30px;
+  border: none;
+  background: #4facfe;
+  background: linear-gradient(0deg, #4facfe, #00f2fe);
+  color: #fff;
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  transition: transform 1s;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px #5e7fca;
+  font-weight: bold;
+}
+
+.primary-btn:hover {
+  transform: translateY(-2px);
+  background: linear-gradient(135deg, #4facfe, #00f2fe);
+}
+
+.countdown {
+  font-size: 5rem;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+h2 {
+ margin: 5px;
+ font-size: 32px;
+}
+
+p {
+ font-size: 20px;
+}
+
+.back-btn {
+  position: fixed;
+  top: 16px;
+  left: 16px;
+  z-index: 1000;
+
+  padding: 8px 14px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  font-family: "Hiragino Maru Gothic ProN", "ヒラギノ丸ゴ ProN", "Hiragino Sans", "ヒラギノ角ゴシック", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+  font-size: 16px;
+  border-radius: 30px;
+  border: none;
+  background: #4facfe;
+  background: linear-gradient(0deg, #0087fd, #5cdcff);
+  color: #fff;
+  /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px #5e7fca;
+  font-weight: bold; */
+  transition: all 0.2s ease;
+}
+
+.back-btn:hover {
+  transform: translateY(-1px);
+  background: linear-gradient(180deg, #0087fd, #5cdcff);
 }
