--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ canvas {
 
 .title {
   font-size: 3rem;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   letter-spacing: 0.05em;
 }
 
@@ -86,7 +86,7 @@ canvas {
   border-radius: 30px;
   border: none;
   background: #4facfe;
-  background: linear-gradient(0deg, #4facfe, #00f2fe);
+  background: linear-gradient(3deg, #4facfe, #00f2fe);
   color: #fff;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
   cursor: pointer;
@@ -98,7 +98,7 @@ canvas {
 
 .primary-btn:hover {
   transform: translateY(-2px);
-  background: linear-gradient(135deg, #4facfe, #00f2fe);
+  background: linear-gradient(177deg, #4facfe, #00f2fe);
 }
 
 .countdown {
@@ -114,6 +114,7 @@ h2 {
 
 p {
  font-size: 20px;
+ text-align: center;
 }
 
 .back-btn {
@@ -142,4 +143,32 @@ p {
 .back-btn:hover {
   transform: translateY(-1px);
   background: linear-gradient(180deg, #0087fd, #5cdcff);
+}
+
+.secondary-btn {
+  position: fixed;
+  top: 16px;
+  left: 16px;
+  z-index: 1000;
+
+  padding: 8px 14px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  font-family: "Hiragino Maru Gothic ProN", "ヒラギノ丸ゴ ProN", "Hiragino Sans", "ヒラギノ角ゴシック", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+  font-size: 16px;
+  border-radius: 30px;
+  border: none;
+  background: #4facfe;
+  background: linear-gradient(3deg, #0087fd, #5cdcff);
+  color: #fff;
+  /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px #5e7fca;
+  font-weight: bold; */
+  transition: all 0.2s ease;
+}
+
+.secondary-btn:hover {
+  transform: translateY(-1px);
+  background: linear-gradient(177deg, #0087fd, #5cdcff);
 }
